--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,18 @@ a {
 }
 
 /* header */
-
-.logo {
-    font-family: Raleway, sans-serif;
+.container {
+   flex-direction: row;
+    display: flex;
+    width: 1440px;
+    height: 72px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-bottom: #E7E9FC;
+    background: #FFF;
+}
+.header-logo {
     font-size: 18px;
     font-weight: 700;
     line-height: 1.17;
@@ -30,19 +39,19 @@ a {
     color: #2E2F42;
 }
 
-.list-link {
+.header-menu-item {
     color: #2E2F42;
     font-size: 16px;
-    font-style: normal;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
 
+}
 
-.list-link:hover,
-.list-link:active,
-.list-link:focus {
+.header-menu-list:hover,
+.header-menu-list:active,
+.header-menu-list:focus {
     color: #404bbf;
 }
 
