--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
 body {
-    color: color: #2E2F42;
-    background: #FFF;
-    font-family: 'Raleway', sans-serif;
-    font-family: 'Roboto', sans-serif;
+    color: #434455;
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        background: #FFF;
+        font-family: 'Roboto', sans-serif;
 }
-
 
 ul {
     list-style-type: none;
@@ -14,18 +17,6 @@ a {
     text-decoration: none;
 }
 
-/* header */
-.container {
-   flex-direction: row;
-    display: flex;
-    width: 1440px;
-    height: 72px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    border-bottom: #E7E9FC;
-    background: #FFF;
-}
 .header-logo {
     font-size: 18px;
     font-weight: 700;
@@ -33,6 +24,7 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    font-family: 'Raleway', sans-serif;
 }
 
 .studio {
@@ -49,13 +41,14 @@ a {
 
 }
 
-.header-menu-list:hover,
-.header-menu-list:active,
-.header-menu-list:focus {
+.header-menu-item:hover,
+.header-menu-item:active,
+.header-menu-item:focus {
     color: #404bbf;
 }
 
 .address {
+    font-style: normal;
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -65,8 +58,102 @@ a {
 }
 
 .addres:hover,
-.addres:active,
 .addres:focus {
     color: #404bbf;
     text-decoration: underline;
 }
+
+.section {
+    background: #2E2F42;
+}
+.title {
+    color: #FFF;
+        text-align: center;
+        font-size: 56px;
+        font-weight: 700;
+        line-height: 1.07;
+        letter-spacing: 0.02em;
+}
+.btn {
+        border-radius: 4px;
+        background: #4D5AE5;
+        color: #FFF;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        cursor: pointer;
+}
+.btn:hover,
+.btn:focus {
+    background-color: #404BBF
+}
+.title-list {
+    color: #2E2F42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.title-list-item {
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.team {
+    background: #F4F4FD;
+}
+.team-title {
+    color: #2E2F42;
+    text-align: center;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+.team-fon {
+    background-color: #FFFFFF
+}
+.title-name {
+    color: #2E2F42;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+.team-profesion {
+    color: #434455;
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.footer {
+    background: #2E2F42;
+}
+.footer-studio {
+    color: #F4F4FD;
+}
+.footer-text {
+    color: #F4F4FD;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.footer-logo {
+    color: #4D5AE5;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+
